--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@
 
 # Connection url for the database "netgloo_blog"
 
-spring.datasource.url=jdbc:mysql://localhost:3306/customdiff
+spring.datasource.url=jdbc:mysql://localhost:3306/customdiff?serverTimezone=UTC
 
 # Username and password
 spring.datasource.username = spl
@@ -31,7 +31,7 @@ spring.datasource.validationQuery = SELECT 1
 # spring.jpa.show-sql = true
 
 # Allows Hibernate to generate SQL optimized for a particular DBMS
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 
 server.port = 9090
 
