--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,14 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>com.amashchenko.maven.plugin</groupId>
+				<artifactId>gitflow-maven-plugin</artifactId>
+				<version>1.13.0</version>
+				<configuration>
+					<!-- optional configuration -->
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 </project>
