--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,11 +9,11 @@
 
 # Connection url for the database "netgloo_blog"
 
-spring.datasource.url=jdbc:mysql://localhost:3306/customdiff?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:33307/customdiff?serverTimezone=UTC
 
 # Username and password
-spring.datasource.username = spl
-spring.datasource.password = spl
+spring.datasource.username = customdiff
+spring.datasource.password = customdiff
 
 
 # Keep the connection alive if idle for a long time (needed in production)
@@ -33,7 +33,7 @@ spring.datasource.validationQuery = SELECT 1
 # Allows Hibernate to generate SQL optimized for a particular DBMS
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 
-server.port = 9091
+server.port = 9090
 
 #logging.level.org.hibernate.SQL=DEBUG
 #spring.jpa.properties.hibernate.show_sql=true
